# tetris-cpy

./: .gitignore  2p.cpp  CMakeLists.txt  MANIFEST.in  README.md  config.h  config.ini  env.cpp  inireader.h  pyproject.toml  render.cpp  setup.py  sim.cpp  tetrisboard.cpp  tetrisboard.h  ui.cpp  ui.h
.github/workflows/: cmake.yml  nore-publish.yml  publish.yml  python-publish.yml  render-publish.yml
nore/: README.md  pyproject.toml  setup.py
render/: README.md  pyproject.toml  setup.py
src/: env.cpp
